semantic/src/test_cases/error/test4.cl
class Main{
	val : Bool;
	i : Int <- 10;
	main() : Object{
		{
		val <- if i then true else false fi; 
		}
	};
};
